fixing footer for safe space on iPhone

--- a/main.css
+++ b/main.css
@@ -187,8 +187,9 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
+  height: 7%;
   z-index: 20;
-  margin-bottom: 15px;
+  padding-bottom: .2em;
 }
 
 footer a {
